New in v1.2.2 (????/??/??)
---------------------------

Add a warning message if extended attributes support is broken by the
filesystem (such as with older EncFS versions). (Andrew Ferguson)

Improve handling of Windows ACLs by switching to API functions which
understand inherited ACEs; fixes support for Windows 2000. (Andrew Ferguson)

Support extended attributes on symbolic links. (Andrew Ferguson)

On Mac OS X, read the com.apple.FinderInfo extended attribute since it is the
only storage location for the 'busy' (Z) Finder attribute. (Andrew Ferguson)

Properly fix "AttributeError: RPath instance has no attribute 'inc_compressed'"
bug. Fix in 1.1.12 was in correct place, but wrong solution. (Andrew Ferguson)

Improve support for Python 2.5, which refactored the built-in exceptions so
that SystemExit and KeyboardInterrupt no longer derive from Exception.
Closes support request #106504. (Andrew Ferguson)

Adjust --exclude-if-present option to support directories, symlinks, device
files, etc. Closes bug #24192. Thanks to Vadim Zeitlin for the suggestion.


New in v1.2.1 (2008/08/24)
---------------------------

Produce a new binary for Windows which includes the Python for Windows
Extensions. Thanks to Shohn Trojacek for reporting the problem.

Disable hardlinks by default when backup source or restore destination is
on Windows. (Andrew Ferguson)

Properly catch KeyboardInterrupt on Python 2.5. (Andrew Ferguson)

Don't crash if a CacheIndexable tries to clear a non-existent cache entry,
since the entry must already be cleared. (Andrew Ferguson)


New in v1.2.0 (2008/07/27)
---------------------------

Fall back on the Python make_file_dict function when the filename contains
non-ASCII characters. (Andrew Ferguson)

Ignore Extended Attributes which have Unicode characters outside the current
system representation. These will be correctly handled when rdiff-backup
switches to Python 3, which will have full Unicode support. (Andrew Ferguson)

